# nyc-property-intel

./: .env.example  .gitignore  .mcp.json  .vercelignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  download_and_verify.py  download_live_datasets.py  fast_download.sh  nixpacks.toml  pyproject.toml  railway.toml  resume_311.py  vercel.json
docs/: comprehensive-review-2026-05-17.md  cost-cuts-plan-cleanup-consolidation-2026-05-06.md  data-coverage-audit-2026-05-02.md  data-fix-plan-2026-05-02.md  data-refresh-plan.md  demo-bbls.md  deploy-hosted.md  deployment-plan.md  gtm-user-acquisition-plan-2026-06-07.md  hpd-litigations-findingdate-investigation.md  implementation-plan.md  known-issues.md  market-validation.md  observability-setup.md  operational-changes-log.md  ops-coverage-audit-cron.md  outreach-kit-2026-06-19.md  outreach-tracker.csv  pending-todos-2026-05-05.md  posthog-ip-backfill-credentials-2026-05-06.md  signup-rebuild-plan-2026-05-06.md  signup-stopgap-plan-2026-05-06.md  site-copy-update-spec-2026-05-16.md  sql-queries.md  technical-review-findings.md  test-plan.md  validation-report-2026-06-28.md  web-chat-plan.md
scripts/: alerting.py  build_blog_page.py  check_nested_route_assets.py  clean_blog_citations.py  cleanup_idle_tokens.py  column_null_audit.py  coverage_audit.py  create_indexes.sql  create_views.sql  dashboard.py  fresh_start.sh  indexnow-ping.sh  issue_token.sh  load_and_sync.sh  load_local_datasets.py  load_rolling_sales.py  manage_tokens.py  manual_qa.py  posthog_ip_backfill.py  qa_db.py  recover_by_pk.py  refresh_gaps.sh  refresh_views.sh  run_backfill.py  seed_nycdb.sh  signup_dashboard.py  sync_all.py  sync_delta.py  verify_backfill.py
site/: 404.html  BingSiteAuth.xml  chat.html  dob-violations.html  hpd-violations.html  index.html  legal.html  llms.txt  nyc-eviction-history-search.html  nyc-property-due-diligence.html  property-owner-lookup.html  report.html  reports.html  robots.txt  sitemap.xml  vercel.json  watch-confirm.html
tests/: conftest.py  test_analysis_unit.py  test_anon_chat_instrumentation.py  test_bug_regressions.py  test_chat_activation.py  test_cleanup_idle_tokens.py  test_coerce.py  test_security.py  (+15 more)
(+80 files in other folders)
