[project]
name = "nyc-property-intel"
version = "0.1.0"
description = "NYC Real Estate Due Diligence MCP Server"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.2.0,<2.0",
    "asyncpg>=0.30.0,<1.0",
    "httpx>=0.27.0,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "cachetools>=5.3.0,<6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nyc_property_intel"]

[project.scripts]
nyc-property-intel = "nyc_property_intel.server:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that run against a live local PostgreSQL database",
]
